--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,12 +71,4 @@ workflows:
       - codecov-job:
           requires:
             - build-and-test
-          filters:
-            branches:
-              only:
-                - main
-      - build-and-test:
-          filters:
-            branches:
-              only:
-                - main
+      - build-and-test
