update after CL provide new pricing - added separate properties for odds, resolve, creation

--- a/scripts/abi/TherundownConsumerWrapper.json
+++ b/scripts/abi/TherundownConsumerWrapper.json
@@ -18,7 +18,17 @@
       },
       {
         "internalType": "uint256",
-        "name": "_payment",
+        "name": "_paymentCreate",
+        "type": "uint256"
+      },
+      {
+        "internalType": "uint256",
+        "name": "_paymentResolve",
+        "type": "uint256"
+      },
+      {
+        "internalType": "uint256",
+        "name": "_paymentOdds",
         "type": "uint256"
       }
     ],
@@ -109,11 +119,37 @@
       {
         "indexed": false,
         "internalType": "uint256",
-        "name": "_payment",
+        "name": "_paymentCreate",
         "type": "uint256"
       }
     ],
-    "name": "NewPaymentAmount",
+    "name": "NewPaymentAmountCreate",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "_paymentOdds",
+        "type": "uint256"
+      }
+    ],
+    "name": "NewPaymentAmountOdds",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "_paymentResolve",
+        "type": "uint256"
+      }
+    ],
+    "name": "NewPaymentAmountResolve",
     "type": "event"
   },
   {
@@ -314,7 +350,33 @@
   },
   {
     "inputs": [],
-    "name": "payment",
+    "name": "paymentCreate",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "paymentOdds",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "paymentResolve",
     "outputs": [
       {
         "internalType": "uint256",
@@ -469,11 +531,37 @@
     "inputs": [
       {
         "internalType": "uint256",
-        "name": "_payment",
+        "name": "_paymentCreate",
         "type": "uint256"
       }
     ],
-    "name": "setPayment",
+    "name": "setPaymentCreate",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "uint256",
+        "name": "_paymentOdds",
+        "type": "uint256"
+      }
+    ],
+    "name": "setPaymentOdds",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "uint256",
+        "name": "_paymentResolve",
+        "type": "uint256"
+      }
+    ],
+    "name": "setPaymentResolve",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
