--- a/codecov.yml
+++ b/codecov.yml
@@ -10,6 +10,9 @@ coverage:
     project:
       default:
         target: 80% #overall project/ repo coverage
+    patch:
+      default:
+        target: 65%  
 
 ignore:
   - "**/*Buyback*.sol"
