--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"hardhat": "~2.1.2",
 		"hardhat-gas-reporter": "~1.0.4",
 		"husky": "^8.0.0",
-		"prettier": "~1.19.1",
+		"prettier": "^2.7.1",
+		"prettier-plugin-solidity": "^1.0.0-beta.24",
 		"solc": "0.5.16",
 		"solhint": "~3.3.4",
 		"solidifier": "git@github.com:synthetixio/solidifier#2.2.2",
@@ -60,6 +61,7 @@
 		"@openzeppelin/contracts-4.4.1": "npm:@openzeppelin/contracts@^4.4.1",
 		"@openzeppelin/contracts-upgradeable": "^4.4.1",
 		"@openzeppelin/test-helpers": "^0.5.11",
+		"@prb/math": "^2.5.0",
 		"@uniswap/v3-core": "^1.0.0",
 		"@uniswap/v3-periphery": "^1.3.0",
 		"abi-decoder": "2.3.0",
