--- a/scripts/abi/ApexConsumerWrapper.json
+++ b/scripts/abi/ApexConsumerWrapper.json
@@ -245,7 +245,12 @@
       },
       {
         "internalType": "string",
-        "name": "_betTypeDetail",
+        "name": "_betTypeDetail1",
+        "type": "string"
+      },
+      {
+        "internalType": "string",
+        "name": "_betTypeDetail2",
         "type": "string"
       },
       {
@@ -466,11 +471,6 @@
         "internalType": "string",
         "name": "_betType",
         "type": "string"
-      },
-      {
-        "internalType": "string",
-        "name": "_sport",
-        "type": "string"
       }
     ],
     "name": "requestMatchup",
@@ -610,7 +610,7 @@
         "type": "uint256"
       }
     ],
-    "name": "setPaymentMetadata",
+    "name": "setPaymentAmounts",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
