--- a/scripts/abi/ApexConsumerWrapper.json
+++ b/scripts/abi/ApexConsumerWrapper.json
@@ -45,10 +45,34 @@
         "internalType": "string",
         "name": "_requestResultsJobId",
         "type": "string"
+      },
+      {
+        "internalType": "string[]",
+        "name": "_supportedBetTypes",
+        "type": "string[]"
       }
     ],
     "stateMutability": "nonpayable",
     "type": "constructor"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "string",
+        "name": "_betType",
+        "type": "string"
+      },
+      {
+        "indexed": false,
+        "internalType": "bool",
+        "name": "_isSupported",
+        "type": "bool"
+      }
+    ],
+    "name": "BetTypesChanged",
+    "type": "event"
   },
   {
     "anonymous": false,
@@ -225,7 +249,7 @@
   },
   {
     "inputs": [],
-    "name": "BET_TYPE_PREFIX",
+    "name": "H2H_BET_TYPE",
     "outputs": [
       {
         "internalType": "string",
@@ -238,7 +262,45 @@
   },
   {
     "inputs": [],
-    "name": "GAME_ID_INFIX",
+    "name": "H2H_GAME_ID_INFIX",
+    "outputs": [
+      {
+        "internalType": "string",
+        "name": "",
+        "type": "string"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "string",
+        "name": "",
+        "type": "string"
+      }
+    ],
+    "name": "betTypeIdPerBetType",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "bytes32",
+        "name": "",
+        "type": "bytes32"
+      }
+    ],
+    "name": "betTypePerRequestId",
     "outputs": [
       {
         "internalType": "string",
@@ -533,6 +595,11 @@
       },
       {
         "internalType": "string",
+        "name": "_betType",
+        "type": "string"
+      },
+      {
+        "internalType": "string",
         "name": "_gameNumber",
         "type": "string"
       },
@@ -591,6 +658,11 @@
       {
         "internalType": "string",
         "name": "_eventId",
+        "type": "string"
+      },
+      {
+        "internalType": "string",
+        "name": "_betType",
         "type": "string"
       },
       {
@@ -706,6 +778,24 @@
     "inputs": [
       {
         "internalType": "string",
+        "name": "_betType",
+        "type": "string"
+      },
+      {
+        "internalType": "bool",
+        "name": "_isSupported",
+        "type": "bool"
+      }
+    ],
+    "name": "setSupportedBetType",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "string",
         "name": "",
         "type": "string"
       }
@@ -735,6 +825,25 @@
         "internalType": "string",
         "name": "",
         "type": "string"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
+        "internalType": "string",
+        "name": "",
+        "type": "string"
+      }
+    ],
+    "name": "supportedBetType",
+    "outputs": [
+      {
+        "internalType": "bool",
+        "name": "",
+        "type": "bool"
       }
     ],
     "stateMutability": "view",
