Improve logic for bookmakers
update verifier to store bookmaker id's so no more save after new deploy

adding test to verifier

wrapper testing

--- a/scripts/abi/TherundownConsumerWrapper.json
+++ b/scripts/abi/TherundownConsumerWrapper.json
@@ -42,9 +42,9 @@
         "type": "address"
       },
       {
-        "internalType": "uint256[]",
-        "name": "_defaultBookmakerIds",
-        "type": "uint256[]"
+        "internalType": "address",
+        "name": "_verifier",
+        "type": "address"
       }
     ],
     "stateMutability": "nonpayable",
@@ -94,44 +94,12 @@
     "inputs": [
       {
         "indexed": false,
-        "internalType": "uint256",
-        "name": "_sportId",
-        "type": "uint256"
-      },
-      {
-        "indexed": false,
-        "internalType": "uint256[]",
-        "name": "_ids",
-        "type": "uint256[]"
-      }
-    ],
-    "name": "NewBookmakerIdsBySportId",
-    "type": "event"
-  },
-  {
-    "anonymous": false,
-    "inputs": [
-      {
-        "indexed": false,
         "internalType": "address",
         "name": "_consumer",
         "type": "address"
       }
     ],
     "name": "NewConsumer",
-    "type": "event"
-  },
-  {
-    "anonymous": false,
-    "inputs": [
-      {
-        "indexed": false,
-        "internalType": "uint256[]",
-        "name": "_ids",
-        "type": "uint256[]"
-      }
-    ],
-    "name": "NewDefaultBookmakerIds",
     "type": "event"
   },
   {
@@ -223,6 +191,19 @@
       }
     ],
     "name": "NewSportsAmmAddress",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "address",
+        "name": "_verifier",
+        "type": "address"
+      }
+    ],
+    "name": "NewVerifier",
     "type": "event"
   },
   {
@@ -330,25 +311,6 @@
       }
     ],
     "name": "datePerRequest",
-    "outputs": [
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      }
-    ],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      }
-    ],
-    "name": "defaultBookmakerIds",
     "outputs": [
       {
         "internalType": "uint256",
@@ -653,17 +615,17 @@
   {
     "inputs": [
       {
-        "internalType": "uint256",
-        "name": "_sportId",
-        "type": "uint256"
+        "internalType": "address payable",
+        "name": "account",
+        "type": "address"
       },
       {
-        "internalType": "uint256[]",
-        "name": "_bookmakerIds",
-        "type": "uint256[]"
+        "internalType": "uint256",
+        "name": "amount",
+        "type": "uint256"
       }
     ],
-    "name": "setBookmakerIdsBySportId",
+    "name": "retrieveLINKAmount",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
@@ -677,19 +639,6 @@
       }
     ],
     "name": "setConsumer",
-    "outputs": [],
-    "stateMutability": "nonpayable",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "uint256[]",
-        "name": "_defaultBookmakerIds",
-        "type": "uint256[]"
-      }
-    ],
-    "name": "setDefaultBookmakerIds",
     "outputs": [],
     "stateMutability": "nonpayable",
     "type": "function"
@@ -788,36 +737,25 @@
   {
     "inputs": [
       {
+        "internalType": "address",
+        "name": "_verifier",
+        "type": "address"
+      }
+    ],
+    "name": "setVerifier",
+    "outputs": [],
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [
+      {
         "internalType": "bytes32",
         "name": "",
         "type": "bytes32"
       }
     ],
     "name": "sportIdPerRequestId",
-    "outputs": [
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      }
-    ],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      },
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      }
-    ],
-    "name": "sportIdToBookmakerIds",
     "outputs": [
       {
         "internalType": "uint256",
@@ -852,6 +790,19 @@
     "name": "transferOwnership",
     "outputs": [],
     "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "verifier",
+    "outputs": [
+      {
+        "internalType": "contract ITherundownConsumerVerifier",
+        "name": "",
+        "type": "address"
+      }
+    ],
+    "stateMutability": "view",
     "type": "function"
   }
 ]
