Adding logic for TIP 133
adding deploy scripts

fix other tests

tests

update type "receiver"

update codecov

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,10 +9,11 @@ coverage:
   status:
     project:
       default:
-        target: 77% #overall project/ repo coverage
+        target: 80% #overall project/ repo coverage
     patch:
       default:
         target: 70%  
 
 ignore:
   - "**/*Buyback*.sol"
+  - "utils"
