adding view for bot player props
update tests

adding new reciever

update

adding case areInvalidOdds

adding date as param

add 255 as canceled status on response of node

upgrade on goerli

new deployment

update typo

--- a/scripts/abi/TherundownConsumerWrapper.json
+++ b/scripts/abi/TherundownConsumerWrapper.json
@@ -938,6 +938,11 @@
       },
       {
         "internalType": "uint256",
+        "name": "_date",
+        "type": "uint256"
+      },
+      {
+        "internalType": "uint256",
         "name": "_sportId",
         "type": "uint256"
       },
