--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "thales-contracts",
-	"version": "0.0.2",
+	"name": "@thales-dao/contracts",
+	"version": "0.0.1",
 	"license": "MIT",
 	"author": "Thales",
 	"description": "The smart contracts which make up the Thales system.",
@@ -48,8 +48,8 @@
 		"solidity-coverage": "^0.7.19",
 		"table": "^5.0.2",
 		"web3": "1.3.3",
-		"webpack": "4.44.0",
-		"webpack-cli": "3.3.12"
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
 	},
 	"dependencies": {
 		"@chainlink/contracts": "^0.4.0",
